--- a/styles/style.css
+++ b/styles/style.css
@@ -7,25 +7,318 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  color:#000000 ;
 }
-
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  display: flex;
+  position: relative;
+  background-color: #f2f2f2;
+  align-items: center;
 }
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  width: 228px;
+  height: 32px;
+}
+.header__title {
+  margin:0 0 0 64px;
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: 600;
+  z-index: 2;
+}
+.header__subtitle {
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+  z-index: 2;
+}
+.link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+.header__main-illustration {
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
 .header__square-pic {
-  height: 568px;
   width: 568px;
+  height: 568px;
+  position: absolute;
+  right: 0;
+  top: 64px;
+  background-color: #2f80ed;
 }
-
-/* и элемента с модификатором вида ключ-значение */
+.description {
+  display: flex;
+  justify-content: center;
+  margin: 100px 0;
+}
+.two-columns {
+  display: flex;
+  justify-content:space-between;
+  width: 80%;
+}
+.two-columns__brief {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  width: 175px;
+  margin: 0;
+  color: #2f80ed;
+}
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0 0 30px;
+}
+.two-columns__paragraph:last-child {
+  margin: 0;
+}
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
+}
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.section-title_theme_light {
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  width: 60%;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 20px;
+}
+.section-subtitle_theme_light {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 60%;
+  margin: 0;
+  text-align: center;
+}
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.table {
+  width: 1100px;
+  justify-content:space-between;
+  flex-wrap: wrap;
+  display: flex;
+}
+.table_theme_light {
+  margin: 0 auto 100px;
+}
+.table__cell_theme_light {
+  width: 250px;
+  margin-top: 60px;
+}
+.table__heading_theme_light {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  width: 250px;
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+.table__text_theme_light {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-bottom: 0px;
+  margin-top: 20px;
+}
+.feynman {
+  background-color: #f2f2f2;
+  display: flex;
+  position: relative;
+  height: 890px;
+  flex-direction: column;
+  background-image: url("../images/feynman.png");
+  background-size: 867px 637px;
+  align-items: center;
+  background-position: bottom left;
+  background-repeat: no-repeat;
+}
+.feynman__title {
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  text-align: center;
+  margin: 100px 0 0 0;
+}
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin-top: 70px;
+}
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  top: 50%;
+  text-decoration: none;
+  color: #2f80ed;
+  right: 48px;
+  margin-bottom: 0%;
+}
+.kaufman {
+  background-color: #1f1f1f;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+.section-title_theme_dark {
+  color: white;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
+  width: 60%;
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: 90px;
+  z-index: 2;
+}
+.section-subtitle_theme_dark {
+  color: white;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  width: 60%;
+  margin: 0;
+  text-align: center;
+  z-index: 2;
+}
+.table_theme_dark {
+  margin: 0 auto 90px;
+  z-index: 2;
+}
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
 }
+.table__heading_theme_dark {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  margin-top: 0;
+}
+.table__text_theme_dark {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+ .kaufman__triangle {
+  position: absolute;
+  z-index: 1;
+  width: 877px;
+  height: 877px;
+  right: -210px;
+  background-image: url("../images/kaufman-triangle.svg");
+  background-size: contain;
+}
+.footer {
+  min-height: 350px;
+  background-color: #1f1f1f;
+  justify-content: center;
+  display: flex;
+  color: white;
+}
+.footer__columns {
+  justify-content: space-between;
+  display: flex;
+  margin-top: 60px;
+  margin-bottom: 40px;
+  width: 90%;
+}
+.footer__column_content_copyright {
+  justify-content: space-between;
+  display: flex;
+  flex-basis: 711px;
+  flex-direction: column;
+}
+.logo_place_footer {
+  width: 228px;
+  height: 32px;
+}
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  margin: 18px auto 18px 0;
+  font-weight: normal;
+}
+.footer__column_content_info {
+  flex-direction: column;
+  display: flex;
+}
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0;
+}
+.footer__column-links {
+  flex-direction: column;
+  display: flex;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+  margin: 20px 0 16px;
+}
+.footer__column-link {
+  color: white;
+  display: flex;
+  text-decoration: none;
+  align-items: center;
+}
+.footer__column_content_social {
+  flex-direction: column;
+  display: flex;
+}
+.footer__column-icon {
+  margin: 0 10px 0 0;
+  width: 16px;
+  height: 16px;
+}
+
+
+
+
