--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -4,5 +4,8 @@
   width: 877px;
   height: 877px;
   right: -210px;
-
+  background-image: url("/images/kaufman-triangle.svg");
+  background-size: contain;
 }
+
+
