--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -5,6 +5,7 @@
   text-decoration: none;
   color: #2f80ed;
   transition: opacity 0.5s ease;
+  align-self: flex-start;
 }
 .khan__buy-link:hover {
   opacity: .5;
